--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="/src/css/global.less">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DND_5E</title>
 </head>
